--- a/app/assets/styles/base/_variables.css
+++ b/app/assets/styles/base/_variables.css
@@ -1,2 +1,6 @@
-$mainBlue: #2f5572;
-$mainOrange: #d59541;
+/* COLOR VARIABLES*/
+$color-purple-light: #7f5af0;
+$color-purple-dark: #16161a;
+$color-white: #ffffff;
+$color-gray-light: #f5f5f5;
+$color-gray-dark: #94a1b2;
