--- a/app/assets/styles/base/_global.css
+++ b/app/assets/styles/base/_global.css
@@ -9,14 +9,30 @@
 html {
   box-sizing: border-box;
   scroll-behavior: smooth;
+  font-size: 62.5%; /* 10px/16px = 62.5% -> 1rem = 10px */
 }
 
 body {
-  font-family: "Roboto", sans-serif;
-  color: #333;
+  font-family: $font-primary;
+  color: $color-gray-copy;
+  font-weight: 400;
+  line-height: 1.6;
 }
 
 img {
   max-width: 100%;
   height: auto;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  color: $color-gray-heading;
+}
+
+p {
+  font-size: 1.8rem;
 }
