--- a/app/assets/styles/base/_variables.css
+++ b/app/assets/styles/base/_variables.css
@@ -4,3 +4,8 @@ $color-purple-dark: #16161a;
 $color-white: #ffffff;
 $color-gray-light: #f5f5f5;
 $color-gray-dark: #94a1b2;
+$color-gray-copy: #666;
+$color-gray-heading: #444;
+
+/* FONT VARIABLES */
+$font-primary: "Source Sans Pro", sans-serif;
