--- a/app/assets/styles/base/_global.css
+++ b/app/assets/styles/base/_global.css
@@ -9,7 +9,8 @@
 html {
   box-sizing: border-box;
   scroll-behavior: smooth;
-  font-size: 62.5%; /* 10px/16px = 62.5% -> 1rem = 10px */
+  font-size: calc(15px + 0.390625vw);
+  /* font-size: 62.5%; */ /* 10px/16px = 62.5% -> 1rem = 10px */
 }
 
 body {
@@ -30,9 +31,5 @@ h3,
 h4,
 h5,
 h6 {
-  color: $color-gray-heading;
-}
-
-p {
-  font-size: 1.8rem;
+  color: $color-purple-dark;
 }
