--- a/app/assets/styles/styles.css
+++ b/app/assets/styles/styles.css
@@ -1,5 +1,10 @@
 @import "normalize.css";
 @import "base/_variables";
 @import "base/_global";
+@import "base/_layout";
 @import "base/_mixins";
+@import "modules/_btn";
+@import "modules/_main-nav";
 @import "modules/_hero-header";
+@import "modules/_card";
+@import "modules/_map.css";
