Mobile and Desktop menu implemented

--- a/app/assets/styles/base/_variables.css
+++ b/app/assets/styles/base/_variables.css
@@ -1,6 +1,6 @@
 /* COLOR VARIABLES*/
-$color-purple-light: #7f5af0;
-$color-purple-dark: #16161a;
+$color-purple-light: rgb(127, 90, 240);
+$color-purple-dark: rgb(22, 22, 26);
 $color-white: #fffffe;
 $color-gray-light: #f5f5f5;
 $color-gray-dark: #94a1b2;
