--- a/app/assets/styles/styles.css
+++ b/app/assets/styles/styles.css
@@ -4,7 +4,7 @@
 @import "base/_layout";
 @import "base/_mixins";
 @import "modules/_btn";
-@import "modules/_main-nav";
+@import "modules/_navigation";
 @import "modules/_hero-header";
 @import "modules/_card";
 @import "modules/_map.css";
