Adjusted cards for large screens

--- a/app/assets/styles/modules/_card.css
+++ b/app/assets/styles/modules/_card.css
@@ -1,7 +1,11 @@
 .feature-container {
   display: grid;
-  grid-template-columns: 1fr;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
   row-gap: 2rem;
+  column-gap: 2rem;
+  @mixin atLarge {
+    column-gap: 2rem;
+  }
 }
 .feature {
   box-shadow: 0 0.3rem 1rem rgba(0, 0, 0, 0.075);
