--- a/app/assets/styles/modules/_map.css
+++ b/app/assets/styles/modules/_map.css
@@ -1,3 +1,11 @@
+.section-map {
+  background-color: rgb(232, 231, 231);
+
+  .container {
+    padding: 0;
+  }
+}
+
 #map {
   &-image {
     height: 100%;
