--- a/app/assets/styles/styles.css
+++ b/app/assets/styles/styles.css
@@ -7,4 +7,6 @@
 @import "modules/_navigation";
 @import "modules/_hero-header";
 @import "modules/_card";
-@import "modules/_map.css";
+@import "modules/_map";
+@import "../../../node_modules/lightgallery/css/lightgallery-bundle.css";
+@import "modules/_imageGallery";
