--- a/app/assets/styles/modules/_navigation.css
+++ b/app/assets/styles/modules/_navigation.css
@@ -2,22 +2,31 @@
   max-width: 130px;
 }
 .navWrap {
-  position: sticky;
+  position: fixed;
   top: 0;
   z-index: 99;
   height: 70px;
   width: 100%;
-  background-color: $color-purple-light;
+  background-color: rgba(127, 90, 240);
   padding: 0 1.5rem;
   display: flex;
   align-items: center;
   justify-content: space-between;
-  transition: 0.14s ease-in-out;
+  transition: all 0.14s ease-in-out;
 
   @mixin atLarge {
-    background-color: white;
+    background-color: rgba(255, 255, 255, 0);
     height: 90px;
+    /* box-shadow: 0px 1px 8px rgba(0, 0, 0, 0.1); */
+    box-shadow: none;
+  }
+}
+
+@mixin atLarge {
+  .navWrap.sticky {
+    background-color: rgba(255, 255, 255, 0.9);
     box-shadow: 0px 1px 8px rgba(0, 0, 0, 0.1);
+    height: 50px;
   }
 }
 
@@ -30,6 +39,10 @@ input#navToggle ~ label {
   padding: 0.25rem;
   width: 2.5rem;
   height: 2.2rem;
+  display: block;
+  @mixin atLarge {
+    display: none;
+  }
 }
 
 input#navToggle ~ label > span,
@@ -131,7 +144,7 @@ input#navToggle ~ label > span::after {
       border-bottom: solid 1px $color-gray-dark;
       transition: 0.14s ease-in-out;
       @mixin atLarge {
-        color: $color-purple-dark;
+        color: $color-white;
         border-bottom: none;
         background: transparent;
         padding: 0.8rem 1rem;
@@ -143,6 +156,37 @@ input#navToggle ~ label > span::after {
       color: $color-purple-dark;
       background-color: $color-gray-dark;
       @mixin atLarge {
+        background-color: transparent;
+        color: $color-purple-light;
+      }
+    }
+  }
+
+  /* Sticky */
+  .sticky &__link {
+    &:link,
+    &:visited {
+      display: inline-block;
+      text-decoration: none;
+      width: 100%;
+      padding: 1.2rem 1.5rem;
+      color: $color-gray-light;
+      border-bottom: solid 1px $color-gray-dark;
+      transition: 0.14s ease-in-out;
+      @mixin atLarge {
+        color: $color-purple-dark;
+        border-bottom: none;
+        background: transparent;
+        padding: 0.8rem 1rem;
+      }
+    }
+
+    &:hover,
+    &:active {
+      color: $color-purple-light;
+      background-color: $color-gray-dark;
+      @mixin atLarge {
+        color: $color-purple-light;
         background-color: transparent;
       }
     }
