--- a/app/assets/styles/styles.css
+++ b/app/assets/styles/styles.css
@@ -3,6 +3,9 @@
 @import "base/_global";
 @import "base/_layout";
 @import "base/_mixins";
+@import "base/_fonts";
+
+@import "modules/_section";
 @import "modules/_btn";
 @import "modules/_navigation";
 @import "modules/_hero-header";
@@ -10,3 +13,4 @@
 @import "modules/_map";
 @import "../../../node_modules/lightgallery/css/lightgallery-bundle.css";
 @import "modules/_imageGallery";
+@import "modules/_footer";
