Implemented Modal popup

--- a/app/assets/styles/styles.css
+++ b/app/assets/styles/styles.css
@@ -14,3 +14,4 @@
 @import "../../../node_modules/lightgallery/css/lightgallery-bundle.css";
 @import "modules/_imageGallery";
 @import "modules/_footer";
+@import "modules/_modal";
