--- a/app/assets/styles/modules/_btn.css
+++ b/app/assets/styles/modules/_btn.css
@@ -1,7 +1,7 @@
 .btn {
   color: $color-white;
   padding: 1rem 2.8rem;
-  border-radius: 3rem;
+  border-radius: 0.5rem;
   border: none;
   text-transform: uppercase;
   letter-spacing: 0.05rem;
@@ -16,6 +16,7 @@
     text-decoration: none;
     padding: 0.5rem 1.5rem;
     color: $color-white !important;
+    font-size: 0.8rem;
   }
 
   &:hover {
@@ -26,7 +27,7 @@
 .sticky .btn {
   @mixin atLarge {
     &--small {
-      padding: 0.2rem 1.5rem;
+      padding: 0.3rem 1.5rem;
     }
   }
 }
