--- a/app/assets/styles/modules/_hero-header.css
+++ b/app/assets/styles/modules/_hero-header.css
@@ -17,7 +17,7 @@ header {
     height: 100%;
     width: 100%;
     z-index: -1;
-    max-height: 700px;
+    /* max-height: 700px; */
   }
 
   .hero--content {
@@ -49,7 +49,8 @@ header {
       }
     }
     p {
-      margin: 1rem 0;
+      font-size: 1.2rem;
+      margin: 1rem 0 2rem 0;
     }
   }
 }
