--- a/app/assets/styles/modules/_navigation.css
+++ b/app/assets/styles/modules/_navigation.css
@@ -19,6 +19,10 @@
     height: 90px;
     /* box-shadow: 0px 1px 8px rgba(0, 0, 0, 0.1); */
     box-shadow: none;
+    display: grid;
+    grid-template-columns: 130px minmax(auto, 75em);
+    justify-content: center;
+    align-content: center;
   }
 }
 
