Hero image max height bug fix

--- a/app/assets/styles/modules/_hero-header.css
+++ b/app/assets/styles/modules/_hero-header.css
@@ -17,7 +17,7 @@ header {
     height: 100%;
     width: 100%;
     z-index: -1;
-    /* max-height: 700px; */
+    max-height: 800px;
   }
 
   .hero--content {
