--- a/app/assets/styles/modules/_modal.css
+++ b/app/assets/styles/modules/_modal.css
@@ -15,6 +15,7 @@
   justify-content: center;
   align-items: center;
   border-top: 10px solid $color-purple-light;
+  border-radius: 0.5rem;
 
   a {
     color: $color-purple-light;
