implemented reveal on scroll for some sections

--- a/app/assets/styles/modules/_section.css
+++ b/app/assets/styles/modules/_section.css
@@ -1,3 +1,6 @@
+.section {
+  padding: 4rem 0;
+}
 .section__title {
   margin: 0 auto 5rem auto;
   text-align: center;
@@ -15,4 +18,13 @@
 
 .section-cat {
   padding-top: 0;
+}
+
+.reveal {
+  transition: transform 1s, opacity 1s;
+}
+
+.section--hidden {
+  opacity: 0;
+  transform: translateY(8rem);
 }
